fix horizontal scroll bar

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Fredericka the Great', Tahoma;
     margin: 0;
     position: absolute;
-    min-width: 100vw;
+    max-width: 100vw;
 }
 
 #navbar {
@@ -191,7 +191,8 @@ footer a {
 }
 
 @media (min-width: 480px) {
-    nav ul {
+   
+     nav ul {
         justify-content: flex-end;
     }
     
